--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.13.1",
+    "react-router-dom": "^7.13.1",
     "tailwindcss": "^4.2.0"
   },
   "devDependencies": {
